[gd_scene load_steps=5 format=3 uid="uid://ci2m5uyxalab"]

[ext_resource type="Script" path="res://scenes/main_office.gd" id="1_xxdkd"]
[ext_resource type="Texture2D" uid="uid://ce41m5h2su7me" path="res://SceneArt/Trash Room.png" id="2_4lqf5"]
[ext_resource type="Script" path="res://scenes/Interactable.gd" id="3_18scg"]
[ext_resource type="PackedScene" uid="uid://xkgc22deglng" path="res://scenes/core/cursor_item.tscn" id="4_u5s3n"]

[node name="TrashDump" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxdkd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 321.0
texture = ExtResource("2_4lqf5")
expand_mode = 1
stretch_mode = 5

[node name="Item" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 101.0
offset_right = 131.0
offset_bottom = 181.0
script = ExtResource("3_18scg")
item_type = "PaperTowel"

[node name="CursorItem" parent="." instance=ExtResource("4_u5s3n")]
layout_mode = 0

[node name="InputBlocker" type="Control" parent="." groups=["InputBlocker"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="Item" to="Item" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Item" to="Item" method="_on_mouse_exited"]
[connection signal="pressed" from="Item" to="Item" method="_on_pressed"]
